<resources>
    <string name="app_name">Mizuu</string>
    <string name="markedAsWatched">Marked as watched!</string>
    <string name="markedAsUnwatched">Marked as unwatched!</string>
    <string name="chooserWatchList">Watchlist</string>
    <string name="stringEditMovie">Edit movie</string>
    <string name="stringEditTvShow">Edit TV show</string>
    <string name="stringEditTvShowEpisode">Edit TV show episode</string>
    <string name="stringLaunchScreen">Launch screen</string>
    <string name="stringLaunchScreenDescription">Select which section to show at launch.</string>
    <string name="stringRemoveUnavailableEntries">Remove unavailable files</string>
    <string name="detailsAirDate">Air Date</string>
    <string name="stringMenu">Menu</string>
    <string name="stringUpcoming">Upcoming</string>
    <string name="stringNowPlaying">In theaters</string>
    <string name="stringPopular">Popular</string>
    <string name="fileSources">File sources</string>
    <string name="filesourcesDescription">Manage your file sources.</string>
    <string name="prefsFileSourcesDescription">Manage the file sources for your media.</string>
    <string name="txtSelectFileSources">Select file sources</string>
    <string name="updateMoviesTitle">Update movies</string>
    <string name="updateTvShowsTitle">Update TV shows</string>
    <string name="options">Options</string>
    <string name="addFileSource">Add file source</string>
    <string name="done">Done</string>
    <string name="other">Other</string>
    <string name="noVideoPlayerFound">No compatible video player found!</string>
    <string name="loginAsAnonymous">Log in as anonymous</string>
    <string name="loginAsGuest">Log in as guest (for Windows)</string>
    <string name="coverart">Cover art</string>
    <string name="backdrop">Backdrop images</string>
    <string name="collectionart">Collection art</string>
    <string name="browseMedia">Browse artwork</string>
    <string name="advanced">Advanced</string>
    <string name="network">Network shares</string>
    <string name="bufferSize">Stream buffer size</string>
    <string name="bufferSizeDescription">Set the buffer size of the video streaming service.</string>
    <string name="_8kb">8 KB</string>
    <string name="_16kb">16 KB</string>
    <string name="lookingForNetworkSources">Looking for network sources…</string>
    <string name="searching">Searching…</string>
    <string name="scanForSources">Scan for network sources</string>
    <string name="detailsFirstAired">First aired</string>
    <string name="choiceWatchedMovies">Watched movies</string>
    <string name="choiceUnwatchedMovies">Unwatched movies</string>
    <string name="allGenres">All genres</string>
    <string name="noFileSources">No file sources</string>
    <string name="addFileSourcesAbove">Add file sources using the menu item above.</string>
    <string name="anonymous">Anonymous</string>
    <string name="selectLogin">Select user login</string>
    <string name="browseSources">Browse sources</string>
    <string name="playPart">Play part</string>
    <string name="part">Part</string>
    <string name="failedToLogin">Failed to log in!</string>
    <string name="loginSucceeded">Log in succeeded!</string>
    <string name="logIn">Log in</string>
    <string name="networkLogin">Network login</string>
    <string name="removedAccount">Removed account details!</string>
    <string name="removeAccount">Remove account</string>
    <string name="automaticallyShareSocialUpdates">Automatically share social updates when you watch a movie or TV show.</string>
    <string name="relatedMovies">Similar movies</string>
    <string name="stringLocal">Local content</string>
    <string name="stringDiscover">Discover</string>
    <string name="removeFromWatchlist">Remove from Watch list</string>
    <string name="watchLater">Watch later</string>
    <string name="stringSpecials">Specials</string>
    <string name="unidentifiedFiles">Unidentified files</string>
    <string name="selectFileToIdentify">Select a file to manually identify.</string>
    <string name="noUnidentifiedFiles">No unidentified files</string>
    <string name="removeAll">Remove all</string>
    <string name="removeAllUnidentifiedFiles">Remove all unidentified files</string>
    <string name="unidentified">Unidentified</string>
    <string name="translations">Translations</string>
    <string name="gridView">Grid view</string>
    <string name="grid_item_size">Cover size</string>
    <string name="listView">List view</string>
    <string name="deleteFile">Delete file</string>
    <string name="filters">Filters</string>
    <string name="allCertifications">All certifications</string>
    <string name="selectCertification">Select certification</string>
    <string name="allReleaseYears">All release years</string>
    <string name="selectReleaseYear">Select release year</string>
    <string name="movingDataFiles">Moving data files</string>
    <string name="movingDataFilesDescription">Mizuu will start shortly. This may take a few minutes…</string>
    <string name="social">Social</string>
    <string name="syncTvShows">Synchronizing TV shows with Trakt</string>
    <string name="syncMovies">Synchronizing movies with Trakt</string>
    <string name="folders">Folders</string>
    <string name="selectFolder">Select folder</string>
    <string name="selectFileSource">Select file source</string>
    <string name="scheduledUpdates">Scheduled updates</string>
    <string name="enableScheduledLibraryUpdates">Enable scheduled library updates</string>
    <string name="scheduledAtLaunch">At application launch</string>
    <string name="scheduledEveryHour">Every hour</string>
    <string name="scheduledEvery2Hours">Every 2 hours</string>
    <string name="scheduledEvery4Hours">Every 4 hours</string>
    <string name="scheduledEvery6Hours">Every 6 hours</string>
    <string name="scheduledEvery12Hours">Every 12 hours</string>
    <string name="scheduledEveryDay">Every day</string>
    <string name="scheduledEveryWeek">Every week</string>
    <string name="nextUpdateIn">Next update in</string>
    <string name="enterTitle">Enter title</string>
    <string name="identify">Identify</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="of">of</string>
    <string name="includeAdultContent">Include adult content</string>
    <string name="includeAdultContentDescription">Include adult titles when searching for movies.</string>
    <string name="inLibrary">In library</string>
    <string name="tvShowEpisodesOrderType">TV show episodes order type</string>
    <string name="tvShowEpisodesOrderTypeDescription">Show newest or oldest episodes first.</string>
    <string name="newestFirst">Newest first</string>
    <string name="oldestFirst">Oldest first</string>
    <string name="syncLibraries">Synchronize libraries</string>
    <string name="installed_media_apps">Media apps</string>
    <string name="searchMoviesFromMizuu">Search movies from Mizuu</string>
    <string name="searchTvShowsFromMizuu">Search TV shows from Mizuu</string>
    <string name="tvShowsWithUnwatchedEpisodes">Unwatched shows</string>
    <string name="loading_movie_parts">Loading movie parts</string>
    <string name="few_moments">This may take a few moments…</string>
    <string name="drawerMyMovies">My Movies</string>
    <string name="drawerMyTvShows">My TV Shows</string>
    <string name="drawerOnlineMovies">Online Movies</string>
    <string name="drawerWebVideos">Web Videos</string>
    <string name="greeting">Welcome</string>
    <string name="thirdPartyLibraries">Third party libraries</string>
    <string name="actor">Actor</string>
    <string name="overviewGridItemSizeTitle">Set overview cover size</string>
    <string name="overviewGridItemSizeDescription">Change the size of movie and TV show covers in the overviews.</string>
    <string name="large">Large</string>
    <string name="normal">Normal</string>
    <string name="small">Small</string>
    <string name="finishedMovieLibraryUpdate">Finished updating movies</string>
    <string name="finishedTvShowsLibraryUpdate">Finished updating TV shows</string>
    <string name="scanning">Scanning</string>
    <string name="failedDeleting">Could not delete file!</string>
    <string name="alwaysDeleteFileTitle">Always delete file when removing content</string>
    <string name="alwaysDeleteFile">Automatically check the \"Delete file\" option when removing a movie or TV show episode.</string>
    <string name="gettingReady">Getting ready…</string>
    <string name="stoppingUpdate">Stopping update… This may take a short while.</string>
    <string name="downloadingMovieCollection">Downloading movie collection…</string>
    <string name="contentLocationDevice">On my device</string>
    <string name="no_content">No content</string>
    <string name="folder_has_no_files_folders">This folder has no files or folders.</string>
    <string name="tvShowSeasonsOrderType">TV show seasons order type</string>
    <string name="tvShowSeasonsOrderTypeDescription">Show newest or oldest seasons first.</string>
    <string name="setEpisodesLayoutDescription">Use a grid or list view to display TV show episodes.</string>
    <string name="setEpisodeLayout">TV show episodes layout</string>
    <string name="clear_filters">Clear filters</string>
    <string name="random_movie">Random movie</string>
    <string name="show_file_location">Show file location(s)</string>
    <string name="show_file_location_description">Make file location(s) visible in the movie and TV show details view.</string>
    <string name="set_pref_language_title">Set preferred language</string>
    <string name="set_pref_language_description">Localize movie and TV show information into selected language. Defaults to English.</string>
    <string name="view_collection_online">View collection online</string>
    <string name="release_year">Release year</string>
    <string name="settings_name">Settings</string>
    <string name="chooserMovies">Movies</string>
    <string name="chooserTVShows">TV shows</string>
    <string name="networkUsername">Username</string>
    <string name="networkPassword">Password</string>
    <string name="networkIpAddress">Server address (IP)</string>
    <string name="networkDomain">Domain (optional)</string>
    <string name="addCurrentFolderAsFileSource">Add current folder as file source</string>
    <string name="detailsCertification">Certification</string>
    <string name="tmdb_api_key_title">TMDb API key</string>
    <string name="tvdb_api_key_title">TVDb API key</string>
    <string name="trakt_api_key_title">Trakt.tv API key</string>
    <string name="api_key_summary">Enter your personal API key here.</string>
    <string name="menuUpdateTitle">Update library</string>
    <string name="stringSort">Sort</string>
    <string name="stringSearch">Search</string>
    <string name="sortTitle">Title</string>
    <string name="sortRelease">Release</string>
    <string name="sortDuration">Duration</string>
    <string name="sortRating">Rating</string>
    <string name="sortWeightedRating">Weighted rating</string>
    <string name="sortAdded">Date added</string>
    <string name="choiceGenres">Genres</string>
    <string name="choiceAvailableFiles">Available files</string>
    <string name="choiceOffline">Offline</string>
    <string name="sortFirstAired">First aired</string>
    <string name="sortNewestEpisode">Newest episode</string>
    <string name="prefsUIGeneral">General</string>
    <string name="prefsIdentification">Identification</string>
    <string name="prefsIdentificationAndSearch">Identification and search</string>
    <string name="prefsUI">User interface</string>
    <string name="prefsDynamicColorsTitle">Use dynamic colors</string>
    <string name="prefsDynamicColorsSummary">Apply colors matching your wallpaper.</string>
</resources>