<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/search_textbox"
        android:icon="@drawable/ic_search_white_24dp"
        android:title="@string/stringSearch"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always|collapseActionView" />

    <item
        android:id="@+id/cover_size"
        android:icon="@drawable/ic_view_module_white_24dp"
        android:title="@string/grid_item_size"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/cover_size_small"
                android:title="@string/small" />
            <item
                android:id="@+id/cover_size_normal"
                android:title="@string/normal" />
            <item
                android:id="@+id/cover_size_large"
                android:title="@string/large" />
        </menu>
    </item>

    <item
        android:icon="@drawable/ic_sort_white_24dp"
        android:title="@string/stringSort"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/menuSortTitle"
                android:title="@string/sortTitle" />
            <item
                android:id="@+id/menuSortRelease"
                android:title="@string/sortFirstAired" />
            <item
                android:id="@+id/menuSortNewestEpisode"
                android:title="@string/sortNewestEpisode" />
            <item
                android:id="@+id/menuSortDuration"
                android:title="@string/sortDuration" />
            <item
                android:id="@+id/menuSortRating"
                android:title="@string/sortRating" />
            <item
                android:id="@+id/menuSortWeightedRating"
                android:title="@string/sortWeightedRating" />
        </menu>
    </item>

    <item
        android:id="@+id/update"
        android:icon="@drawable/ic_sync_white_24dp"
        android:title="@string/menuUpdateTitle" />

    <item
        android:icon="@drawable/ic_filter_list_white_24dp"
        android:title="@string/filters">
        <menu>
            <item
                android:id="@+id/genres"
                android:title="@string/choiceGenres" />
            <item
                android:id="@+id/certifications"
                android:title="@string/detailsCertification" />
            <item
                android:id="@+id/release_year"
                android:title="@string/release_year" />
            <item
                android:id="@+id/folders"
                android:title="@string/folders" />
            <item
                android:id="@+id/fileSources"
                android:title="@string/fileSources" />
            <item
                android:id="@+id/offline_files"
                android:title="@string/choiceOffline" />
            <item
                android:id="@+id/available_files"
                android:title="@string/choiceAvailableFiles" />
            <item
                android:id="@+id/clear_filters"
                android:title="@string/clear_filters" />
        </menu>
    </item>

    <group android:id="@+id/group1" />

</menu>