<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="@string/prefsUIGeneral" >
        <ListPreference
            android:defaultValue="light"
            android:entries="@array/theme_entries"
            android:entryValues="@array/theme_values"
            android:icon="@drawable/ic_settings_white_24dp"
            android:key="prefsTheme"
            android:summary="@string/prefsThemeDescription"
            android:title="@string/prefsThemeTitle" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:icon="@drawable/ic_palette_white_24dp"
            android:key="prefsColorMatchingTheme"
            android:summary="@string/prefsDynamicColorsSummary"
            android:title="@string/prefsDynamicColorsTitle" />

        <ListPreference
            android:defaultValue="3"
            android:entries="@array/grid_item_size"
            android:entryValues="@array/grid_item_size_values"
            android:icon="@drawable/ic_view_module_white_24dp"
            android:key="prefsGridItemSize"
            android:summary="@string/overviewGridItemSizeDescription"
            android:title="@string/overviewGridItemSizeTitle" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:icon="@drawable/ic_insert_drive_file_white_24dp"
            android:key="prefsShowFileLocation"
            android:summary="@string/show_file_location_description"
            android:title="@string/show_file_location" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/chooserTVShows" >
        <ListPreference
            android:defaultValue="@string/listView"
            android:entries="@array/seasonsLayout"
            android:entryValues="@array/seasonsLayout"
            android:icon="@drawable/ic_view_module_white_24dp"
            android:key="prefsSeasonsLayout"
            android:summary="@string/setEpisodesLayoutDescription"
            android:title="@string/setEpisodeLayout" />

        <ListPreference
            android:defaultValue="@string/oldestFirst"
            android:entries="@array/episodesOrder"
            android:entryValues="@array/episodesOrder"
            android:icon="@drawable/ic_sort_white_24dp"
            android:key="prefsEpisodesOrder"
            android:summary="@string/tvShowEpisodesOrderTypeDescription"
            android:title="@string/tvShowEpisodesOrderType" />

        <ListPreference
            android:defaultValue="@string/oldestFirst"
            android:entries="@array/episodesOrder"
            android:entryValues="@array/episodesOrder"
            android:icon="@drawable/ic_sort_white_24dp"
            android:key="prefsSeasonsOrder"
            android:summary="@string/tvShowSeasonsOrderTypeDescription"
            android:title="@string/tvShowSeasonsOrderType" />
    </PreferenceCategory>

</PreferenceScreen>