<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="@string/prefsIdentification" >
        <Preference
            android:icon="@drawable/ic_language_white_24dp"
            android:key="prefsLanguagePreference"
            android:summary="@string/set_pref_language_description"
            android:title="@string/set_pref_language_title" />
    </PreferenceCategory>

    <PreferenceCategory android:title="API keys" >
        <EditTextPreference
            android:key="tmdbApiKey"
            android:title="@string/tmdb_api_key_title"
            android:summary="@string/api_key_summary"
            android:dialogTitle="@string/tmdb_api_key_title" />
        <EditTextPreference
            android:key="tvdbApiKey"
            android:title="@string/tvdb_api_key_title"
            android:summary="@string/api_key_summary"
            android:dialogTitle="@string/tvdb_api_key_title" />
        <EditTextPreference
            android:key="traktApiKey"
            android:title="@string/trakt_api_key_title"
            android:summary="@string/api_key_summary"
            android:dialogTitle="@string/trakt_api_key_title" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/chooserMovies" >
        <CheckBoxPreference
            android:defaultValue="false"
            android:icon="@drawable/ic_lock_white_24dp"
            android:key="prefsIncludeAdultContent"
            android:summary="@string/includeAdultContentDescription"
            android:title="@string/includeAdultContent" />
    </PreferenceCategory>

</PreferenceScreen>