<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom">

        <EditText
            android:id="@+id/server"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginRight="8dp"
            android:layout_weight="1"
            android:drawableLeft="@drawable/ic_language_white_24dp"
            android:drawablePadding="8dp"
            android:drawableTint="?android:attr/textColorSecondary"
            android:ems="10"
            android:hint="@string/networkIpAddress"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="?android:attr/textColorPrimary"
            android:textColorHint="?android:attr/textColorSecondary">

            <requestFocus />
        </EditText>

        <ImageButton
            android:id="@+id/imageButton1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:selectableItemBackground"
            android:onClick="search"
            android:padding="8dp"
            android:src="@drawable/ic_search_white_24dp"
            android:tint="?android:attr/textColorPrimary" />
    </LinearLayout>

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:drawableLeft="@drawable/ic_person_white_24dp"
        android:drawablePadding="8dp"
        android:drawableTint="?android:attr/textColorSecondary"
        android:ems="10"
        android:hint="@string/networkUsername"
        android:maxLines="1"
        android:singleLine="true"
        android:textColor="?android:attr/textColorPrimary"
        android:textColorHint="?android:attr/textColorSecondary" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:drawableLeft="@drawable/ic_lock_white_24dp"
        android:drawablePadding="8dp"
        android:drawableTint="?android:attr/textColorSecondary"
        android:ems="10"
        android:hint="@string/networkPassword"
        android:inputType="textPassword"
        android:maxLines="1"
        android:singleLine="true"
        android:textColor="?android:attr/textColorPrimary"
        android:textColorHint="?android:attr/textColorSecondary" />

    <EditText
        android:id="@+id/domain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:drawableLeft="@drawable/ic_folder_open_white_24dp"
        android:drawablePadding="8dp"
        android:drawableTint="?android:attr/textColorSecondary"
        android:ems="10"
        android:hint="@string/networkDomain"
        android:maxLines="1"
        android:singleLine="true"
        android:textColor="?android:attr/textColorPrimary"
        android:textColorHint="?android:attr/textColorSecondary" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/loginAsAnonymous"
        android:textColor="?android:attr/textColorPrimary" />

    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/loginAsGuest"
        android:textColor="?android:attr/textColorPrimary" />

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:measureWithLargestChild="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancel"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="cancel"
            android:text="@android:string/cancel"
            android:textColor="?android:attr/textColorLink" />

        <Button
            android:id="@+id/ok"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="ok"
            android:text="@android:string/ok"
            android:textColor="?android:attr/textColorLink" />
    </LinearLayout>

</LinearLayout>